bookstore-dep/k8s/applications/bookstore-edge/production/patch-env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-edge
spec:
  template:
    metadata:
      name: bookstore-edge
    spec:
      containers:
        - name: bookstore-edge
