bookstore-dep/k8s/applications/bookstore-edge/production/patch-resource.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-edge
spec:
  template:
    spec:
      containers:
        - name: bookstore-edge
          resources:
            requests:
              memory: 756Mi
              cpu: "0.1"
            limits:
              memory: 756Mi
              cpu: "2"
