bookstore-dep/k8s/applications/bookstore-edge/production/patch-volumes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-edge
spec:
  template:
    spec:
      containers:
        - name: bookstore-edge
          volumeMounts:
            - mountPath: /workspace/secrets/keycloak
              name: keycloak-issuer-client-secret-volume
            - mountPath: /workspace/secrets/keycloak
              name: bookstore-keycloak-client-credentials-volume
            - mountPath: /workspace/secrets/redis
              name: bookstore-redis-credentials-volume
      volumes:
        - name: keycloak-issuer-client-secret-volume
          secret:
            secretName: keycloak-issuer-client-secret
        - name: bookstore-keycloak-client-credentials-volume
          secret:
            secretName: bookstore-keycloak-client-credentials
        - name: bookstore-redis-credentials-volume
          secret:
            secretName: bookstore-redis-credentials
