bookstore-dep/k8s/applications/bookstore-edge/production/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-edge-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/actuator" {
        deny all;
        return 403;
      }
